@@ -264,6 +264,15 @@ TEST_CASE("[ComboBox]")
         REQUIRE(comboBox->getExpandDirection() == tgui::ComboBox::ExpandDirection::Down);
     }
 
+    SECTION("ChangeItemOnScroll")
+    {
+        REQUIRE(comboBox->getChangeItemOnScroll());
+        comboBox->setChangeItemOnScroll(false);
+        REQUIRE(!comboBox->getChangeItemOnScroll());
+        comboBox->setChangeItemOnScroll(true);
+        REQUIRE(comboBox->getChangeItemOnScroll());
+    }
+
     SECTION("Events / Signals")
     {
         SECTION("Widget")
@@ -292,6 +301,7 @@ TEST_CASE("[ComboBox]")
             comboBox->addItem("2", "id2");
             comboBox->addItem("3");
             comboBox->setExpandDirection(tgui::ComboBox::ExpandDirection::Automatic);
+            comboBox->setChangeItemOnScroll(true);
 
             const sf::Vector2f mousePosOnComboBox = {100, 15};
             const sf::Vector2f mousePosOnItem1 = {100, 40};
@@ -330,6 +340,12 @@ TEST_CASE("[ComboBox]")
                 container->mouseWheelScrolled(1, mousePosOnComboBox);
                 REQUIRE(comboBox->getSelectedItemIndex() == 0);
                 REQUIRE(itemSelectedCount == 3);
+
+                // Changing item by scrolling can be disabled
+                comboBox->setChangeItemOnScroll(false);
+                container->mouseWheelScrolled(-1, mousePosOnComboBox);
+                REQUIRE(comboBox->getSelectedItemIndex() == 0);
+                comboBox->setChangeItemOnScroll(true);
 
                 // Scrolling on the combo box has no effect when the list is open
                 mouseClick(mousePosOnComboBox);
@@ -484,6 +500,7 @@ TEST_CASE("[ComboBox]")
         comboBox->setMaximumItems(5);
         comboBox->setSelectedItem("Item 2");
         comboBox->setExpandDirection(tgui::ComboBox::ExpandDirection::Up);
+        comboBox->setChangeItemOnScroll(false);
 
         testSavingWidget("ComboBox", comboBox);
     }
